--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_CXX_STANDARD 14)
 include_directories(.)
 
 add_executable(C_Primer
-        "function 2.cpp" C++Primer-2-practice/prac1.cpp)
+        main.cpp C++Primer-2-practice/Cprimer2_1.cpp C++Primer-2-practice/Cprimer2_1.h)
